--- a/application.prod.properties
+++ b/application.prod.properties
@@ -1,1 +1,13 @@
+pring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Hibernate Dialect for H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Eureka Client Configuration
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 
