--- a/application-test.properties
+++ b/application-test.properties
@@ -1,12 +1,10 @@
-pring.h2.console.enabled=true
+# H2 Database (In-memory)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=anil
+spring.datasource.password=anil@123
+
+# Enable H2 Console
+spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Hibernate Dialect for H2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-# Eureka Client Configuration
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
